@@ -1,5 +1,9 @@
 2000-04-09  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/unix/clock_gettime.c: New file.
+	* sysdeps/unix/clock_settime.c: New file.
+	* sysdeps/posix/clock_getres.c: New file.
+
 	* conform/data/ftw.h-data: Add allow-header sys/stat.h.
 
 	* sysdeps/unix/sysv/linux/getdents.c (__getdents): Avoid initial
